experiments w/ new wlot algorithm